--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ python:
 install:
   - pip install -r requirements.txt
 
-script: python -m unittest discover -v
+script:
+  - coverage run --source=src/ -m unittest discover -v
+  - coveralls
