--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,5 +28,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with coverage
       run: coverage run --source=src/ -m unittest discover -v
-    - name: Codecov
+    - name: Make coverage report
       uses: codecov/codecov-action@v1.3.1
