--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,10 +23,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      run: make install
     - name: Test with coverage
-      run: coverage run --source=src/ -m unittest discover -v
+      run: make test
     - name: Make coverage report
       uses: codecov/codecov-action@v1.3.1
